Fix overlapping text issue

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -65,7 +65,7 @@ span.plus > a {
 }
 
 p.article {
-  margin-top: -2em;
+  margin-top: 1em;
   margin-bottom: 1em;
 
   font-family: 'Cabin', sans-serif;
